--- a/blocks/form/components/radio-group/radio-group.scss
+++ b/blocks/form/components/radio-group/radio-group.scss
@@ -241,6 +241,14 @@
       flex-direction: row;
       padding: $spacing-400;
       min-height: auto;
+      justify-content: flex-start;
+
+      &::before {
+        position: absolute;
+        right: $spacing-400;
+        top: 50%;
+        transform: translateY(-50%);
+      }
     }
   }
 }
